--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,6 +1,3 @@
 {
-    "coc.preferences.formatOnSaveFiletypes": ["py", "yaml", "json"],
-    "python.linting.flake8Enabled": true,
-    "python.formatting.provider": "black",
-    "python.jediPath": "/home/danvergara/.local/lib/python3.9/site-packages"
+    "python.jediPath": "/home/danvergara/.pyenv/versions/3.10.0/lib/python3.10/site-packages"
 }
